--- a/src/scss/common/frames/_markdown.scss
+++ b/src/scss/common/frames/_markdown.scss
@@ -1,3 +1,4 @@
+@use '../../../../node_modules/highlight.js/scss/agate.scss';
 @use '../fonts/fonts';
 
 /* Layout for GitHub-Flavoured Markdown */
@@ -7,6 +8,9 @@ $yellow-light: #ffffe0;
 $yellow-papayawhip: #ffefd5;
 $grey-light: #d3d3d3;
 $grey-lighter: #ededed;
+$font-code: Consolas, 'Courier New', Courier, monospace;
+$font-redhat: 'Red Hat Display';
+$font-crimson: 'Crimson Pro';
 
 @mixin markdown {
   // Reset margins
@@ -64,7 +68,7 @@ $grey-lighter: #ededed;
   blockquote,
   ol,
   ul {
-    font-family: 'Crimson Pro';
+    font-family: $font-crimson;
     margin: 0.3em 0 0 0;
     line-height: 1.25em;
   }
@@ -156,6 +160,7 @@ $grey-lighter: #ededed;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #ffffff;
     padding: 8px;
     max-width: 75%;
     margin-left: auto;
@@ -169,13 +174,14 @@ $grey-lighter: #ededed;
 
     img + .caption {
       margin-top: 4px;
-      font-family: 'Crimson Pro';
+      font-family: $font-crimson;
       line-height: 1.25em;
     }
   }
 
   // Inline code. Preindented one will be managed by highightJS
   code {
+    font-family: $font-code;
     font-size: 0.85em;
     line-height: 0.85em;
     padding: 0 0.25em;
@@ -184,5 +190,87 @@ $grey-lighter: #ededed;
     border-radius: 2px;
     border-color: $grey-light;
     background-color: $grey-lighter;
+  }
+
+  pre {
+    font-family: $font-code;
+    display: block;
+    position: relative;
+    overflow-x: auto;
+    padding: 0.5em 0 0.5em 1em;
+    background-color: #333;
+
+    // Overwrite inline code & hljs theme settings
+    code,
+    code.hljs {
+      display: inline-block; // Need inline layout to get correct width
+      position: relative; // Allow hacks like line highlight/labeling
+      overflow: hidden; // Has some problem on pixel calculation, so prevent scrolling here
+      background: none; // Let <pre> cover background.
+      color: white;
+      border: none;
+      padding: 0 2em 0 0;
+      font-size: 1em;
+      line-height: 1.25em;
+      z-index: 2;
+    }
+  }
+
+  .hljs-ln-label-container {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    min-width: 100%;
+    z-index: 0;
+  }
+
+  .labled-ln {
+    display: block;
+    position: absolute;
+    left: 0;
+    padding-left: 1em;
+    width: 100%;
+    line-height: 1.25em;
+    box-sizing: border-box;
+    user-select: none;
+
+    .labled-ln-color-fill {
+      display: block;
+      line-height: inherit;
+      background-color: #525852;
+      box-sizing: border-box;
+      user-select: none;
+    }
+  }
+
+  .hljs-ln {
+    .ln-bg {
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      height: 100%;
+      border-right: 1px solid yellow;
+      background: none;
+    }
+
+    .ln-num {
+      position: relative;
+      line-height: 1.25em;
+      user-select: none;
+    }
+
+    .ln-num::before {
+      position: absolute;
+      z-index: 3;
+      top: 0;
+      right: 0;
+      margin-right: 1.25em;
+      color: yellow;
+      font-style: normal;
+      font-weight: normal;
+      content: attr(data-num);
+    }
   }
 }
